2006-04-03  Marc Singer  <elf@buici.com>

	* Makefile: 1.3.23
	* Additions to the kconfig directory so that make menuconfig
	works again. 
	
2006-04-01  Marc Singer  <elf@buici.com>

	* Makefile: 1.3.22

	* src/mach-lh7952x/drv-emac.c (cmd_emac): Moved static structure
	to .rodata.

	* src/drivers/drv-smc91x.c (cmd_eth): Moved static structure to
	.rodata.

	* src/apex/command.c (expand_variables): Allowing '\' escape of
	'$' to prevent expansion of variables for the sake of storing them
	in other environment strings, e.g. startup.

	* include/attributes.h: Grooming.

	* src/apex/console.c: Added (optional) command
	editing...finally...no kidding.

2006-03-31  Marc Singer  <elf@buici.com>

	* src/apex/console.c (read_command): Added (optional) support for
	ANSI key sequences.

	* src/apex/command-history.c: Added (optional) command history
	recall.

2006-03-30  Marc Singer  <elf@buici.com>

	* src/mach-lh7952x/drv-emac.c (emac_release): added a release
	function to the emac driver.  We were having problems with
	spurrious corruption of kernel memory and it looks like the
	problem was that the emac was in an indeterminate state as it was
	being initialized.

2006-03-23  Marc Singer  <elf@buici.com>

	* src/apex/cmd-version.c (cmd_version): Fixed the presentation of
	the apex region for the case when the length is greater than four
	hex digits.

	* src/apex/console.c (read_command): Configuration option allows
	DEL to be interpreted as BS.

	* Makefile: 1.3.21

	* usr/printenv.cc (main): Application that reads APEX environment
	from user-land.

	* src/apex/env.c: added environment link support so that user-land
	applications can read the APEX environment.

2006-03-22  Marc Singer  <elf@buici.com>

	* src/drivers-lh/drv-clcdc.c (VSW): Fixed error in the VSW macro.

	* src/drivers/drv-ext2.c (ext2_find_inode): Fixed the computation
	of the first block where the group descriptors are found.  This
	allows APEX to read cards with block sizes other than 1K.
