@@ -1,3 +1,10 @@
+2006-05-04  Marc Singer  <elf@buici.com>
+
+	* src/drivers-lh/drv-clcdc.c: Added support for BGR color format
+	in the frame buffer.  This is really for the benefit of testing,
+	but may also be important when we support a splash screen being
+	visible through the kernel boot process.
+
 2006-04-03  Marc Singer  <elf@buici.com>
 
 	* Makefile: 1.3.23
